# rvben-rumdl

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  Cargo.toml  README.md  rules.json  rumdl.schema.json
.github/workflows/: ci.yml  performance.yml  release.yml
benches/: config_per_file_lookup.rs  fix_performance.rs
docs/: RULES.md  cli-config-overrides.md  code-block-tools.md  comparison.md  flavors.md  global-settings.md  index.md  markdownlint-comparison.md  md012.md  md013.md  md014.md  md027.md  md033.md  md044.md  md046.md  md051.md  md060.md  md076.md  md077.md  mdformat-comparison.md
docs/flavors/: azure_devops.md  mkdocs.md  pandoc.md  quarto.md
docs/usage/: cli.md
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-arm64-musl/: package.json
npm/cli-linux-x64/: package.json
npm/cli-linux-x64-musl/: package.json
npm/cli-win32-x64/: package.json
npm/rumdl/: package.json
proptest-regressions/rules/: formatter_proptest.txt
scripts/: benchmark_cold_start.py  generate_benchmark_chart.py
src/: cli_config_override.rs  cli_types.rs  cli_utils.rs  config_intelligent_merge_tests.rs  embedded_lint.rs  filtered_lines.rs  fix_coordinator.rs  lib.rs  main.rs  markdownlint_config.rs  rule_config_serde.rs  wasm.rs  watch.rs  workspace_index.rs
src/code_block_tools/: config.rs  processor.rs  registry.rs
src/commands/: check.rs  config.rs  import.rs  init.rs  server.rs
src/config/: flavor.rs  loading.rs  mod.rs  parsers.rs  registry.rs  source_tracking.rs  tests.rs  types.rs  validation.rs
src/file_processor/: embedded.rs  tests.rs
src/lint_context/: flavor_detection.rs  line_computation.rs  link_parser.rs  mod.rs  tests.rs  types.rs
src/lsp/: completion.rs  configuration.rs  linting.rs  mod.rs  navigation.rs  server.rs  tests.rs
src/rules/: heading_utils.rs  md009_trailing_spaces.rs  md010_no_hard_tabs.rs  md011_no_reversed_links.rs  md012_no_multiple_blanks.rs  md020_no_missing_space_closed_atx.rs  md022_blanks_around_headings.rs  md025_single_title.rs  md027_multiple_spaces_blockquote.rs  md029_ordered_list_prefix.rs  md031_blanks_around_fences.rs  md032_blanks_around_lists.rs  md033_no_inline_html.rs  md034_no_bare_urls.rs  md035_hr_style.rs  md037_spaces_around_emphasis.rs  md038_no_space_in_code.rs  md040_fenced_code_language.rs  md042_no_empty_links.rs  md044_proper_names.rs  md046_code_block_style.rs  md048_code_fence_style.rs  md050_strong_style.rs  md051_link_fragments.rs  md052_reference_links_images.rs  md054_link_image_style.rs  md055_table_pipe_style.rs  md056_table_column_count.rs  md057_existing_relative_links.rs  md058_blanks_around_tables.rs  md064_no_multiple_consecutive_spaces.rs  md072_frontmatter_key_sort.rs  md073_toc_validation.rs  md074_mkdocs_nav.rs  md075_orphaned_table_rows.rs  md076_list_item_spacing.rs  md077_list_continuation_indent.rs  mod.rs
src/rules/md013_line_length/: block_builder.rs  helpers.rs  md013_config.rs  mod.rs  tests.rs
src/rules/md033_no_inline_html/: md033_config.rs
src/rules/md041_first_line_heading/: mod.rs
src/rules/md044_proper_names/: md044_config.rs
src/rules/md055_table_pipe_style/: md055_config.rs
src/utils/: mod.rs  pandoc.rs  regex_cache.rs  text_reflow.rs
tests/: config_tests.rs  init_command_test.rs  init_tests.rs  lsp_integration_tests.rs  md013_mkdocs_reflow_test.rs  mkdocs_extensions_test.rs  rules_mod_test.rs
tests/character_ranges/: mod.rs
tests/cli/: cli_config_override_test.rs  cli_flavor_test.rs  cli_integration_tests.rs  mod.rs
tests/config/: config_tests.rs
tests/formats/: azure_devops_test.rs  md013_reflow_integration_test.rs  mod.rs  quarto_comprehensive_test.rs  sentence_per_line_test.rs
tests/integration/: rules_mod_test.rs
tests/perf/: malformed_markdown_stress_tests.rs  perf_regression_issue_148.rs  performance_validation_tests.rs
tests/rules/: formatter_idempotency_test.rs  formatter_proptest.rs  heading_edge_cases_test.rs  md009_test.rs  md025_test.rs  md027_test.rs  md038_test.rs  md044_test.rs  md051_test.rs  md052_test.rs  md057_test.rs  md060_test.rs
tests/unicode/: utf8_comprehensive_stress_test.rs
tests/utils/: text_reflow_test.rs
tests/vscode/: vscode_extension_fixes.rs
(+3 files in other folders)
